@@ -50,4 +50,16 @@ FEATURES NOT IMPLEMENTED
     - Bootstrap for front end
     - Activity list
 
+KNOWN BUGS/OTHER NOTES
+
+    - Usernames that will get modified by wordpress "slugging" will cause
+      bugs. For example, using white spaces in usernames causes wordpress
+      to replace them with "-". This has not been taken into account.
+    - Admin side task creation doesn't save the information about
+      which project the task belongs to, even though the interface for it
+      exists.
+    - When creating a task for a certain project, one can set the task to
+      belong to a person not in the project.
+    - Creating 2 project pages with identical names can cause bugs (not tested).
+
 End of file.
